--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,9 @@
 
 /* Second Navigation Bar */
 
-.navbar-nav > li > a {padding-top:5px !important; padding-bottom:5px !important;}
+.navbar-nav > li > a {
+  padding-top: 5px !important; padding-bottom:5px !important;
+}
 
 .navbar-light {
   min-height: 80px !important
@@ -50,35 +52,77 @@
   background-color: #ECEEEF !important;
 }
 
-/* Popovers */
-.popover-header {
-  background-color: #FF4D4D;
-  color: White;
+footer {
+  background-color: Black !important;
+}
+footer .footer-info > ul {
+  list-style-type: none;
 }
 
-.popover-body {
+.social li {
+	background: none repeat scroll 0 0 #4C8930;
+	-webkit-border-radius: 50%;
+	-moz-border-radius: 50%;
+	-o-border-radius: 50%;
+	-ms-border-radius: 50%;
+	border-radius: 50%;
+	float: left;
+	height: 36px;
+	line-height: 36px;
+	margin: 0 8px 0 0;
+	padding: 0;
+	text-align: center;
+	width: 36px;
+	transition: all 0.5s ease 0s;
+	-moz-transition: all 0.5s ease 0s;
+	-webkit-transition: all 0.5s ease 0s;
+	-ms-transition: all 0.5s ease 0s;
+	-o-transition: all 0.5s ease 0s;
+}
+.social li:hover {
+	transform: scale(1.15) rotate(360deg);
+	-webkit-transform: scale(1.1) rotate(360deg);
+	-moz-transform: scale(1.1) rotate(360deg);
+	-ms-transform: scale(1.1) rotate(360deg);
+	-o-transform: scale(1.1) rotate(360deg);
+}
+.social li a {
+	color: #EDEFF1;
+}
+.social li:hover {
+	background: #4C8930;
+}
+.social li a i {
+	font-size: 16px;
+	margin: 0 0 0 5px;
+	color: #EDEFF1 !important;
 }
 
-@media (min-width: 576px) {
+@media (max-width: 576px) {
+  .navbar-default .navbar-collapse.collapse {
+    display: block!important;
+  }
 
 }
-
 
 @media (max-width: 992px) {
   .navbar-default .navbar-collapse.collapse {
     display: block!important;
   }
+  .navbar-nav>li, .navbar-nav {
+    float: left !important;
+  }
+  .navbar-nav.navbar-right:last-child {
+    margin-right: -15px !important;
+  }
+  .navbar-right {
+    float: right!important;
+  } 
 }
 
 /*
-.navbar-nav>li, .navbar-nav {
-  float: left !important;
-}
 
-.navbar-nav.navbar-right:last-child {
-  margin-right: -15px !important;
-}
 
-.navbar-right {
-  float: right!important;
-} */
+
+
+*/
