--- a/css/styles.css
+++ b/css/styles.css
@@ -57,7 +57,7 @@
 footer {
   background-color: Black !important;
 }
-footer .footer-info > ul {
+footer .footer-info .footer-add-margin > ul {
   list-style-type: none;
 }
 
@@ -102,13 +102,22 @@ footer .footer-info > ul {
 }
 
 @media (max-width: 576px) {
-  .footer-info {
+  .footer-add-margin {
     margin-left: 1em !important;
   }
 }
 
 
 @media (max-width: 768px) {
+  /* Parallax image disable*/
+  .parallax {
+    background-image: url("../assets/background.png");
+    height: 300px;
+    background-attachment: scroll;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
 
 }
 
